# my_project

./: .env.example  .env.example.txt  .gitignore  README.md  main.py  mylog.txt  pyproject.toml
data/: names.txt  test.operations.json  test_transactions.csv  transactions_excel.xlsx
logs/: main_1.txt  work_func.txt
src/: decorators.py  external_api.py  find_directory.py  find_transactions.py  generators.py  masks.py  processing.py  the_contents_of_the_file.py  utils.py  widget.py
tests/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
